// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`do not sync keywords 1`] = `
Object {
  "jobs": Object {
    "build": Object {
      "runs-on": "ubuntu-latest",
      "steps": Array [
        Object {
          "uses": "actions/checkout@v3",
        },
        Object {
          "uses": "jaid/action-sync-node-meta@v2.0.0",
          "with": Object {
            "approve": false,
            "commitMessage": "fix: write GitHub metadata to package.json [{changes}]",
            "githubToken": "\${{ secrets.GITHUB_TOKEN }}",
            "syncKeywords": false,
          },
        },
        Object {
          "uses": "gautamkrishnar/keepalive-workflow@v1",
        },
      ],
    },
  },
  "name": "sync-metadata",
  "on": Object {
    "schedule": Array [
      Object {
        "cron": "0 5 * * *",
      },
    ],
    "workflow_dispatch": Object {},
  },
}
`;

exports[`valid 1`] = `
Object {
  "jobs": Object {
    "build": Object {
      "runs-on": "ubuntu-latest",
      "steps": Array [
        Object {
          "uses": "actions/checkout@v3",
        },
        Object {
          "uses": "jaid/action-sync-node-meta@v2.0.0",
          "with": Object {
            "approve": false,
            "commitMessage": "fix: write GitHub metadata to package.json [{changes}]",
            "githubToken": "\${{ secrets.GITHUB_TOKEN }}",
          },
        },
        Object {
          "uses": "gautamkrishnar/keepalive-workflow@v1",
        },
      ],
    },
  },
  "name": "sync-metadata",
  "on": Object {
    "schedule": Array [
      Object {
        "cron": "0 5 * * *",
      },
    ],
    "workflow_dispatch": Object {},
  },
}
`;
